omni/tests/goldens/types/undefined_ident_15.err
tests/goldens/types/undefined_ident_15.omni:1:20: error: undefined identifier "missing15"
  let result15:int = missing15
                     ^~~ hint: declare the name before using it
